Fix MySQL compatibility: boolean values, timestamp format, insert placeholders